MODIFIED: Display the login form

--- a/UsernameForm.html
+++ b/UsernameForm.html
@@ -33,7 +33,7 @@
     </form>
     <script>
         function myFunction() {
-          alert("Data added successfully!!");
+          alert("Login successfull");
         }
     </script> 
 </body>
